src/tests/evaluator_error/type_mismatch_boolean_prefix_expression/snapshots/monkey_interpreter__tests__evaluator_error__type_mismatch_boolean_prefix_expression__test_type_mismatch_boolean_prefix_expression_case_4_evaluator.snap
---
source: src/tests/evaluator_error/type_mismatch_boolean_prefix_expression/mod.rs
expression: error
---
Err(
    UnknownOperator,
)
